# ecommerc_mongodb/src/routes.js
@@ -5,11 +5,18 @@ function routes(app){
     app.use('/', require('./routes/category.js'))
     app.use('/', require('./routes/supplier.js'));
     app.use('/', require('./routes/products.js'));
-    //app.use('/', require('./routes/orders.js'));
+
+
+    app.use('/', require('./routes/orders.js'));
+    app.use('/', require('./routes/ordersDetails.js'))
+    app.use('/', require('./routes/orderStatus'));
+    app.use('/', require('./routes/payment.js'));
+
+
+   
     return
 }
 
 module.exports = routes
 
 
-//  app.use('/', require('./routes/client.js')); cada nova rota precisa de um novo /
